@@ -1,5 +1,7 @@
+[B]1.9.8:[/B]
+- fix video archive Date
 [B]1.9.7:[/B]
-- fix archive by Date
+- fix version script.module.stream.resolver
 [B]1.9.6:[/B]
 - add support Kodi 20
 [B]1.9.5:[/B]
